--- a/public/stylesheets/typography.css
+++ b/public/stylesheets/typography.css
@@ -65,6 +65,7 @@ mark {
     font-family: var(--font-mono);
     font-weight: 400;
     font-size: var(--text-size-prose-h);
+    line-height: 1.2;
     margin: var(--space-2xl) 0 var(--space-m) 0;
     padding-top: var(--space-xl);
     color: var(--color-heading);
@@ -74,6 +75,10 @@ mark {
 
 .prose h2:first-of-type {
     padding-top: 0;
+}
+
+.prose h3 {
+    line-height: 1.25;
 }
 
 .prose h2.conclusion {
